# S2S

./: pyproject.toml
src/s2s/: main.py
src/s2s/clients/: setlistfm.py
src/s2s/clients/setlistfm/: client.py  schemas.py
src/s2s/clients/spotify/: client.py
src/s2s/config/: settings.py
src/s2s/services/: playlists.py
