[project]
name = "s2s"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicit declaration of src/ layout
[tool.hatch.build.targets.wheel]
packages = ["src/s2s"]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
